Project

General

Profile

Actions

Bug #16348

closed

Unable to disable journaling feature if in unexpected mirror state

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

librbd: failed to remove image from mirroring directory: (2) No such file or directory

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16372: jewel: Unable to disable journaling feature if in unexpected mirror stateResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #16372: jewel: Unable to disable journaling feature if in unexpected mirror state added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF