librbd: ignore ENOENT error when removing image from mirror directory

Fixes: http://tracker.ceph.com/issues/16348
Signed-off-by: Jason Dillaman <dillaman@redhat.com>